--- a/config/traefik/dynamic.yml
+++ b/config/traefik/dynamic.yml
@@ -1,42 +1,16 @@
-# ============================================================================
-# Traefik Dynamic Configuration - Production Grade for n8n + MCP
-# ============================================================================
+# config/traefik/dynamic.yml
+tls:
+  certificates:
+    - certFile: /etc/traefik/certs/n8n.agentshq.net+1.pem
+      keyFile: /etc/traefik/certs/n8n.agentshq.net+1-key.pem
+  stores:
+    default:
+      defaultCertificate:
+        certFile: /etc/traefik/certs/n8n.agentshq.net+1.pem
+        keyFile: /etc/traefik/certs/n8n.agentshq.net+1-key.pem
 
 http:
-  # ==========================================================================
-  # Middlewares
-  # ==========================================================================
   middlewares:
-    # MCP-Specific Middleware Chain
-    mcp-sse:
-      chain:
-        middlewares:
-          - mcp-no-buffer
-          - mcp-no-compress
-          - mcp-headers
-
-    mcp-no-buffer:
-      buffering:
-        maxRequestBodyBytes: 0
-        maxResponseBodyBytes: 0
-        memRequestBodyBytes: 0
-        memResponseBodyBytes: 0
-        retryExpression: "false"
-
-    mcp-no-compress:
-      compress:
-        excludedContentTypes:
-          - "*/*"
-
-    mcp-headers:
-      headers:
-        customRequestHeaders:
-          X-Forwarded-Proto: "https"
-        customResponseHeaders:
-          Cache-Control: "no-cache, no-store, must-revalidate"
-          X-Accel-Buffering: "no"
-          X-Content-Type-Options: "nosniff"
-
     security-headers:
       headers:
         customRequestHeaders:
@@ -46,61 +20,63 @@ http:
           X-Frame-Options: "SAMEORIGIN"
           X-XSS-Protection: "1; mode=block"
           Referrer-Policy: "strict-origin-when-cross-origin"
-          Strict-Transport-Security: "max-age=31536000; includeSubDomains; preload"
         sslRedirect: true
-
+        stsSeconds: 31536000
+        stsIncludeSubdomains: true
+        stsPreload: true
+    
+    n8n-headers:
+      headers:
+        customRequestHeaders:
+          X-Forwarded-Proto: "https"
+        customResponseHeaders:
+          X-Content-Type-Options: "nosniff"
+          X-Frame-Options: "SAMEORIGIN"
+        sslRedirect: true
+    
     compress:
-      compress:
-        excludedContentTypes:
-          - text/event-stream
-          - application/grpc
-          - application/json+sse
-          - application/x-ndjson
-        minResponseBodyBytes: 1024
+      compress: {}
+    
+    mcp-sse:
+      headers:
+        customResponseHeaders:
+          X-Accel-Buffering: "no"
+          Cache-Control: "no-cache, no-store, must-revalidate"
+          Connection: "keep-alive"
+          Content-Type: "text/event-stream"
+          Pragma: "no-cache"
+          Expires: "0"
+      buffering:
+        maxRequestBodyBytes: 0
+        memRequestBodyBytes: 0
+        maxResponseBodyBytes: 0
+        memResponseBodyBytes: 0
+        retryExpression: "IsNetworkError() && Attempts() < 2"
 
-  # ==========================================================================
-  # Routers
-  # ==========================================================================
   routers:
-    # MCP Route - HIGHEST PRIORITY
+    # ADD THIS DEFAULT ROUTE:
+    n8n-default:
+      rule: "Host(`n8n.agentshq.net`) && PathPrefix(`/`)"
+      service: n8n-webhook
+      entryPoints:
+        - websecure
+      priority: 5  # Lower priority than specific routes
+      middlewares:
+        - n8n-headers
+        - compress
+      tls: {}
+    
+    # Your existing routes (keep these):
     n8n-mcp:
       rule: "Host(`n8n.agentshq.net`) && PathPrefix(`/mcp`)"
       service: n8n-mcp
       entryPoints:
         - websecure
-      priority: 100
+      priority: 100  # Higher priority for specific paths
       middlewares:
         - mcp-sse
-      tls:
-        certResolver: letsencrypt
-
-    # n8n API Route
-    n8n-api:
-      rule: "Host(`n8n.agentshq.net`) && PathPrefix(`/api`)"
-      service: n8n-webhook
-      entryPoints:
-        - websecure
-      priority: 50
-      middlewares:
-        - security-headers
-        - compress
-      tls:
-        certResolver: letsencrypt
-
-    # n8n Webhook Route
-    n8n-webhooks:
-      rule: "Host(`n8n.agentshq.net`) && PathPrefix(`/webhook`)"
-      service: n8n-webhook
-      entryPoints:
-        - websecure
-      priority: 50
-      middlewares:
-        - security-headers
-        - compress
-      tls:
-        certResolver: letsencrypt
-
-    # n8n Main Route - DEFAULT
+      tls: {}
+    
     n8n-main:
       rule: "Host(`n8n.agentshq.net`)"
       service: n8n-webhook
@@ -108,93 +84,35 @@ http:
         - websecure
       priority: 10
       middlewares:
-        - security-headers
+        - n8n-headers
         - compress
-      tls:
-        certResolver: letsencrypt
+      tls: {}
 
-    # HTTP to HTTPS Redirect
-    n8n-http-redirect:
-      rule: "Host(`n8n.agentshq.net`)"
-      entryPoints:
-        - web
-      service: noop@internal
-      middlewares:
-        - https-redirect
-
-    # Grafana Route
-    grafana:
-      rule: "Host(`grafana.agentshq.net`)"
-      service: grafana
-      entryPoints:
-        - websecure
-      middlewares:
-        - security-headers
-        - compress
-      tls:
-        certResolver: letsencrypt
-
-    grafana-http-redirect:
-      rule: "Host(`grafana.agentshq.net`)"
-      entryPoints:
-        - web
-      service: noop@internal
-      middlewares:
-        - https-redirect
-
-  # ==========================================================================
-  # Services
-  # ==========================================================================
   services:
     n8n-webhook:
       loadBalancer:
         servers:
           - url: "http://n8n-webhook:5678"
-        passHostHeader: true
         healthCheck:
           path: /healthz
           interval: 30s
           timeout: 10s
-          scheme: http
-
+    
     n8n-mcp:
       loadBalancer:
         servers:
           - url: "http://n8n-mcp:5678"
-        passHostHeader: true
-        responseForwarding:
-          flushInterval: "1ms"
         healthCheck:
           path: /healthz
           interval: 30s
           timeout: 10s
-          scheme: http
-
+        passHostHeader: true
+    
     grafana:
       loadBalancer:
         servers:
           - url: "http://grafana:3000"
-        passHostHeader: true
-
-  # ==========================================================================
-  # Additional Middlewares
-  # ==========================================================================
-  middlewares:
-    https-redirect:
-      redirectScheme:
-        scheme: https
-        permanent: true
-
-# ============================================================================
-# TLS Configuration
-# ============================================================================
-tls:
-  options:
-    default:
-      minVersion: VersionTLS12
-      cipherSuites:
-        - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
-        - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
-        - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
-        - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
-      sniStrict: true
+        healthCheck:
+          path: /api/health
+          interval: 30s
+          timeout: 10s
