--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -109,25 +109,42 @@ services:
         max-file: "5"
 
   # ============================================================================
-  # INGRESS LAYER: Traefik with Let's Encrypt (Manager Node Only)
+  # INGRESS LAYER: Traefik with mkcert certificates (Manager Node Only)
   # ============================================================================
   traefik:
     image: traefik:v3.5.3
     deploy:
       replicas: 1
+      placement:
+        constraints:
+          - node.role == manager
       restart_policy:
         condition: on-failure
+        delay: 5s
+        max_attempts: 3
     ports:
-      - "80:80"
-      - "443:443"
-      - "8080:8080"  # Traefik dashboard/metrics (optional, can be removed)
+      - target: 80
+        published: 80
+        protocol: tcp
+        mode: host
+      - target: 443
+        published: 443
+        protocol: tcp
+        mode: host
+      - target: 8080
+        published: 8080
+        protocol: tcp
+        mode: host
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - letsencrypt:/letsencrypt
       - ./config/traefik/traefik.yml:/etc/traefik/traefik.yml:ro
       - ./config/traefik/dynamic.yml:/etc/traefik/dynamic.yml:ro
+      - ./config/traefik/certs:/etc/traefik/certs:ro
+      - traefik_data:/etc/traefik/acme
+    environment:
+      TZ: ${TIMEZONE}
     healthcheck:
-      test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--spider', 'http://localhost:8080/ping']
+      test: ['CMD', 'traefik', 'healthcheck', '--ping']
       interval: 10s
       timeout: 3s
       retries: 3
@@ -152,12 +169,13 @@ services:
         - "traefik.enable=true"
         
         # Main n8n route
-        - "traefik.http.routers.n8n.rule=Host(`${N8N_HOST}`)"
+        - "traefik.http.routers.n8n.rule=Host(`n8n.agentshq.net`)"
+        # - "traefik.http.routers.n8n.rule=Host(`${N8N_HOST}`)"
         - "traefik.http.routers.n8n.entrypoints=websecure"
-        - "traefik.http.routers.n8n.tls.certresolver=letsencrypt"
         - "traefik.http.routers.n8n.priority=10"
         - "traefik.http.services.n8n.loadbalancer.server.port=5678"
-        - "traefik.http.routers.n8n.middlewares=n8n-headers@file,compress@file"
+        # - "traefik.http.routers.n8n.middlewares=n8n-headers@file,compress@file"
+        - "traefik.http.routers.n8n.middlewares=n8n-headers,compress"
       restart_policy:
         condition: on-failure
         delay: 10s
@@ -240,12 +258,13 @@ services:
         - "traefik.enable=true"
         
         # MCP route - HIGHEST PRIORITY
-        - "traefik.http.routers.n8n-mcp.rule=Host(`${N8N_HOST}`) && PathPrefix(`/mcp`)"
+        # - "traefik.http.routers.n8n-mcp.rule=Host(`${N8N_HOST}`) && PathPrefix(`/mcp`)"
+        - "traefik.http.routers.n8n-mcp.rule=Host(`n8n.agentshq.net`) && PathPrefix(`/mcp`)"
         - "traefik.http.routers.n8n-mcp.entrypoints=websecure"
-        - "traefik.http.routers.n8n-mcp.tls.certresolver=letsencrypt"
         - "traefik.http.routers.n8n-mcp.priority=100"
         - "traefik.http.services.n8n-mcp.loadbalancer.server.port=5678"
-        - "traefik.http.routers.n8n-mcp.middlewares=mcp-sse@file"
+        # - "traefik.http.routers.n8n-mcp.middlewares=mcp-sse@file"
+        - "traefik.http.routers.n8n-mcp.middlewares=mcp-sse"
       restart_policy:
         condition: on-failure
         delay: 10s
@@ -399,7 +418,6 @@ services:
         - "traefik.enable=true"
         - "traefik.http.routers.grafana.rule=Host(`grafana.${N8N_HOST}`)"
         - "traefik.http.routers.grafana.entrypoints=websecure"
-        - "traefik.http.routers.grafana.tls.certresolver=letsencrypt"
         - "traefik.http.services.grafana.loadbalancer.server.port=3000"
     environment:
       GF_SECURITY_ADMIN_USER: ${GRAFANA_ADMIN_USER}
